# Curso-24-25

./: README.md  borrarBuild.sh
Algorítmica/prácticas/práctica 1/: datosMultiplicacionMatrices.txt
Algorítmica/prácticas/práctica 1/Entrega/LopezHinojosa/LopezHinojosa_Completa/: CMakeLists.txt  CrearGraficos.sh  DeterminanteRecursivo.eps  datosDeterminanteRecursivo.txt  funciones.hpp
Algorítmica/prácticas/práctica 1/MaterialPractica1/: CMakeLists.txt  ClaseTiempo.hpp  Datos.txt  algorithmics_utils.hpp  algorithmics_utils_impl.hpp  bubble.txt  bubble_sort.cpp  bubble_sort.hpp  common.hpp  ejemplo_gnuplot.sh  fact.txt  grafico.eps  main.cpp  matrix_multiplication.cpp  random_arguments.hpp  tiemposEstimados.txt  tiemposFactorialEstimados.txt  tiemposReales.txt  tiemposRealesFactorial.txt
Algorítmica/prácticas/práctica 1/MaterialPractica1/DeterminanteRecursivo/: DeterminanteRecursivo.cpp  DeterminanteRecursivo.hpp  det.cpp
Algorítmica/prácticas/práctica 1/MaterialPractica1/MultplicaciondeMatrices/: MultiplicacionMatriz.cpp  MultiplicacionMatriz.hpp  matrix_mult.cpp
Algorítmica/prácticas/práctica 1/MaterialPractica1v2/: CMakeLists.txt  common.cpp  ejemplo_gnuplot.sh  fact.txt  grafico.eps  mejor_det.txt  mmults.txt  tiemposFactorialEstimados.txt  tiemposRealesFactorial.txt
Algorítmica/prácticas/práctica 1/MaterialPractica1v2/DeterminanteRecursivo/: DeterminanteRecursivo.cpp  DeterminanteRecursivo.hpp  det.cpp
Algorítmica/prácticas/práctica 1/MaterialPractica1v2/OrdenacionBurbuja/: OrdenacionBurbuja.cpp  OrdenacionBurbuja.hpp  burbuja.cpp
Algorítmica/prácticas/práctica 1/MaterialPractica1v3/: CMakeLists.txt  MultiplicacionMatrices.eps  a.out  datosDeterminanteRecursivo.txt  datosDeterminantesRecursivo.txt  datosMultiplicacionMatrices.txt  datosOrdenacionBurbuja.txt  funciones.cpp  funciones.hpp  graficoMultiplicacionMatrices.eps  graficoMultiplicarMatrices.sh  main.cpp  sistemaEcuaciones.hpp
Algorítmica/prácticas/práctica 2/MaterialPractica2/: a.out  entero.cpp  entero.hpp  funcionesExtra.cpp  test.cpp
Algorítmica/teoría/apuntes/Apuntes de Algorítmica/.obsidian/: appearance.json  workspace.json
CESI/teoría/apuntes/Apuntes de CESI/: 2024-09-24.md  Registro de Clases de Teoría.md
CESI/teoría/apuntes/Apuntes de CESI/.obsidian/: workspace.json
FSIV/prácticas/practica 0/fsiv_tutorial_opencv-students-1.8/fsiv_tutorial_opencv/: CMakeLists.txt  common_code.cpp
FSIV/prácticas/practica 1/: guion.txt
FSIV/prácticas/practica 1/demo/cbg_process/: REPORT.md
FSIV/prácticas/practica 1/demo/chroma_key/: REPORT.md
FSIV/teoría/apuntes/Apuntes de FSIV/: 2024-09-16.md  2024-09-18.md  2024-09-23.md  Registro de Clases Prácticas.md  Registro de Clases de Teoría.md
PW/prácticas/Práctica 1/Ejercicio 1/: Jugador.java  Material.java  Pista.java
PW/teoría/apuntes/Apuntes para PW/: 2024-09-18.md  2024-09-24.md  2024-10-01.md  Registro de Clases de Teoría.md
Redes/prácticas/práctica 1/: cliente  cliente.c  servidor  servidor.c
Redes/prácticas/práctica 1/Ejemplo funciones-20240925/: a.out  select
Redes/prácticas/práctica 1/Ejemplo socket UDP-20240925/: clienteUDP.c  servidorUDP.c
Redes/prácticas/práctica 2/: todo.md
Redes/prácticas/práctica 2/Ejemplo Chat TCP-20241009/: S  a.out
Redes/prácticas/práctica 2/test/: C  S  cliente.c  servidor.c
Redes/prácticas/práctica 2/version0/: a.out  client.c  cliente  cliente.c  redes.pem  server.c  servidor  servidor.c
Redes/prácticas/práctica 2/version1/: BLACKJACK.C  CLIENTE.C  COMMON.h  SERVIDOR.C  a.out  client  server
Redes/prácticas/práctica 2/version2/: c  cliente.c  s  servidro.c
Redes/prácticas/práctica 2/version3/: C2  Cliente.c  S  Servidor.c  cliente.c  cliente.h  common.c  common.h  servidor.h
Redes/prácticas/práctica 2/version4/: cliente.c  cliente.h  comunes.c  comunes.h  servidor.c  servidor.h
Redes/prácticas/práctica 2/version5/: S  SERVIDOR.c  U  U2  USUARIO.c  comunes.c  comunes.h  servidor.c  servidor.h  usuario.c  usuario.h
Redes/teoría/apuntes/Apuntes de Redes/: 2024-09-19.md  2024-09-25.md  2024-09-26.md  Registro de Clases de Teoría.md
(+27 files in other folders)
